--- a/back-end/.env
+++ b/back-end/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB (Preview) and CockroachDB (Preview).
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:ulanbator0413@localhost:5432/DiplomaRegister?schema=public"
+DATABASE_URL="postgresql://postgres:password@localhost:5432/DiplomaRegister?schema=public"
